# amp_archive

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Test2.amp  build.rs  print.amp  test.amp
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  CLI_FEATURE.yml  LANGUAGE_FEATURE.yml
examples/: fibonacci.amp  hello_world.amp  struct.amp  while.amp
lib/: _Runtime.amp
lib/C/: Main.amp  Stdio.amp
lib/Std/: Alloc.amp  Buffer.amp  Io.amp  Main.amp  Mem.amp  Slice.amp
runtime/: intrinsic.amp  runtime.amp  runtime.c
src/: args.rs  diagnostic.rs  error.rs  import.rs  linker.rs  main.rs  parser.rs  scanner.rs  span.rs
src/ast/: arg_list.rs  basic.rs  block.rs  decl.rs  expr.rs  func.rs  import.rs  mod.rs  namespace.rs  source.rs  struct_.rs  type_alias.rs  types.rs
src/codegen/: func.rs  mod.rs  stmnt.rs  types.rs  value.rs
src/codegen/value/: cmp.rs  conv.rs  mod.rs  str.rs
src/typechecker/: decl.rs  func.rs  mod.rs  module.rs  namespace.rs  path.rs  scope.rs  stmnt.rs  struct_.rs  symbol.rs  type_alias.rs  types.rs  value.rs  var.rs
tests/: Test.amp  all.py  behavior.py  compiler.py
tests/behavior/: int.amp
tests/compiler/negative/unsized/: README.md  construct_unsized_struct.amp  deref_string_slice.amp  unsized_variable_type.amp
tests/compiler/positive/: hello_world.amp
