[package]
name = "amp"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
codespan-reporting = "0.11.1"
cranelift = "0.93.1"
cranelift-module = "0.93.1"
cranelift-native = "0.93.1"
cranelift-object = "0.93.1"
target-lexicon = "0.12.6"
unicode-xid = "0.2.4"